--- a/amb ambiental/css/amb.css
+++ b/amb ambiental/css/amb.css
@@ -40,3 +40,44 @@ a:visited{color: rgba(140, 195, 64, 1);}
 	clip: rect(0 0 0 0) !important;
 }
 
+.wrapper {
+	max-width: 1000px;
+	margin: 0 auto
+}
+
+/*********************************************************************/
+/* .mainHeader */
+/*********************************************************************/
+.mainHeader {
+	padding: 0 20px;
+	color: #fff;
+	background-color: #0071BC;
+	box-shadow: 0 1px 2px rgba(0,0,0, 0.3);
+}
+
+.mainHeader h1 {
+	float: right;
+	width: 103px;
+	height: 55px;
+	margin: 10px 0;
+	background-image: url('../img/amb_logo.png');
+	text-indent: -99999px;
+	overflow: hidden;
+}
+
+/***********************************************************/
+/* .mainMenu */
+/***********************************************************/
+.mainMenu li {
+	transition: all 0.5s ease-in-out;
+	float: left;
+	list-style: none;
+	padding: 30px;
+	font-size: 1.8em;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+
+.mainMenu li:hover {
+	background-color: rgba(255,255,255, 0.4);
+}
